style, warning and cleanup